SafiUI/safi-ui/tests/compile_fail/numeric_prop.rs
use safi_ui::vnode;

fn main() {
    let _ = vnode! { <X size=16 /> };
}
