SafiUI/safi-ui/tests/compile_fail/numeric_prop.stderr
error: expected string literal
 --> tests/compile_fail/numeric_prop.rs:4:30
  |
4 |     let _ = vnode! { <X size=16 /> };
  |                              ^^
